--- a/SudokuSolver/nbproject/project.properties
+++ b/SudokuSolver/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/SudokuSolver.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-18.0.jar=C:\\Users\\Guilherme\\Downloads\\guava-18.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.guava-18.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
